Changed phrasing on user lookup and checkout message.

--- a/library_project/website/templates/base.html
+++ b/library_project/website/templates/base.html
@@ -33,7 +33,7 @@
             <li><a class="dropdown-item" href="/users">All Users</a></li>
             <li><a class="dropdown-item" href="/newuser">New User</a></li>
             <li><a class="dropdown-item" href="/removeuser">Remove User</a></li>
-            <li><a class="dropdown-item" href="/library/user-books">User Books</a></li>
+            <li><a class="dropdown-item" href="/library/user-books">Lookup User</a></li>
           </ul>
         </div>
       </li>
