--- a/library_project/website/templates/base-no-menus.html
+++ b/library_project/website/templates/base-no-menus.html
@@ -18,10 +18,10 @@
 
   {% block navbar %}
   <nav class="navbar navbar-expand navbar-light mb-4" style="background-color: #6A994E;">
-    <a class="navbar-brand" href="/lock"><img src="{% static 'website/books3.webp' %}" width="50" height="50"></a>
+    <a class="navbar-brand" href="/l"><img src="{% static 'website/books3.webp' %}" width="50" height="50"></a>
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item">
-        <a class="text-dark nav-link" href="/lock">Bookend</a>
+        <a class="text-dark nav-link" href="/l">Bookend</a>
       </li>
     </ul>
   </nav>
