--- a/library_project/website/templates/base.html
+++ b/library_project/website/templates/base.html
@@ -24,6 +24,9 @@
         <a class="text-dark nav-link" href="/">Bookend</a>
       </li>
       <li class="nav-item">
+        <a class="text-dark nav-link" href="/library/catalog">Catalog</a>
+      </li>
+      <li class="nav-item">
         <div class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
             Users
@@ -44,7 +47,6 @@
           </a>
 
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <li><a class="dropdown-item" href="/library/catalog">Catalog</a></li>
             <li><a class="dropdown-item" href="/">Check In/Out</a></li>
             <li><a class="dropdown-item" href="/library/new">Add Books</a></li>
             <li><a class="dropdown-item" href="/library/import-csv">Import CSV</a></li>
@@ -63,6 +65,9 @@
             <li><a class="dropdown-item" href="/library/download-report">Download Zip</a></li>
           </ul>
         </div>
+      </li>
+      <li class="nav-item">
+        <a class="text-dark nav-link" href="/l">Lock</a>
       </li>
 {#      <li class="nav-item">#}
 {#        <a class="nav-link" href="/library/generate-report">Generate Report</a>#}
