Added a tags class to book objects. Added a tool page to cleanup empty strings in the author field.

--- a/library_project/website/static/website/buttons.css
+++ b/library_project/website/static/website/buttons.css
@@ -25,6 +25,13 @@
     font: bold;
 }
 
+.button-small .buttons{
+    border-width: 2px;
+    min-height: 40px;
+    width: 200px;
+    font-size: 2em;
+}
+
 .textBox {
     text-align: center;
 
