--- a/library_project/website/templates/base.html
+++ b/library_project/website/templates/base.html
@@ -67,6 +67,9 @@
         </div>
       </li>
       <li class="nav-item">
+        <a class="text-dark nav-link" href="/tools">Tools</a>
+      </li>
+      <li class="nav-item">
         <a class="text-dark nav-link" href="/l">Lock</a>
       </li>
 {#      <li class="nav-item">#}
