--- a/library_project/website/templates/base.html
+++ b/library_project/website/templates/base.html
@@ -36,7 +36,7 @@
             <li><a class="dropdown-item" href="/users">All Users</a></li>
             <li><a class="dropdown-item" href="/newuser">New User</a></li>
             <li><a class="dropdown-item" href="/removeuser">Remove User</a></li>
-            <li><a class="dropdown-item" href="/library/user-books">Lookup User</a></li>
+{#            <li><a class="dropdown-item" href="/library/user-books">Lookup User</a></li>#}
           </ul>
         </div>
       </li>
@@ -48,7 +48,8 @@
 
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
             <li><a class="dropdown-item" href="/">Check In/Out</a></li>
-            <li><a class="dropdown-item" href="/library/new">Add Books</a></li>
+            <li><a class="dropdown-item" href="/library/new">Add Book</a></li>
+            <li><a class="dropdown-item" href="/library/remove">Remove Book</a></li>
             <li><a class="dropdown-item" href="/library/import-csv">Import CSV</a></li>
           </ul>
         </div>
