--- a/library_project/website/templates/base.html
+++ b/library_project/website/templates/base.html
@@ -115,6 +115,16 @@
   $('#myCheckoutModal').on('shown.bs.modal', function () {
     $('#card_id_checkout').focus()
   })
+
+    var info_messages = document.getElementsByClassName('alert-info');
+
+    setTimeout(function(){
+        for (var i = 0; i < info_messages.length; i ++) {
+            // Set display attribute as !important, neccessary when using bootstrap
+            info_messages[i].setAttribute('style', 'display:none !important');
+        }
+    }, 6000);
+
   {% endblock %}
 </script>
 </html>
