Added gunicorn for production fileserving, run-server defaults to this now.

--- a/library_project/website/templates/base.html
+++ b/library_project/website/templates/base.html
@@ -89,14 +89,8 @@
 
   <!-- Copyright -->
   <div class="container text-center p-3 justify-content-center">
-    <a href="https://github.com/mccorxyz/minnehack-2023">
-      <img class="icon" src="{% static 'website/icons/github.svg' %}" height="30" width="30">
-    </a>
-    <a href="https://minnehack.io/" style="margin-right: 10px;">
-      <img src="{% static 'website/minnehack.png' %}" height="30" width="30">
-    </a>
-    <a href="">
-      <img class="icon" src="{% static 'website/icons/code-solid.svg' %}" height="30" width="30">
+    <a href="https://github.com/cudy789/bookend">
+      <img class="icon" src="{% static 'website/icons/github.svg' %}" height="20" width="20">
     </a>
   </div>
   <!-- Copyright -->
