--- a/library_project/website/static/website/buttons.css
+++ b/library_project/website/static/website/buttons.css
@@ -14,7 +14,9 @@
     flex-direction: column;
     align-items: center;
 
-    background-color: #BC4749;
+    /*background-color: #BC4749;*/
+    background-color: #A02F31;
+
     min-height: 400px;
     width: 600px;
     margin-left: 5%;
