Auto-focus on title field when adding a new book manually.

--- a/library_project/website/templates/base.html
+++ b/library_project/website/templates/base.html
@@ -109,6 +109,9 @@
   $('#myCheckoutModal').on('shown.bs.modal', function () {
     $('#card_id_checkout').focus()
   })
+  $('#manualModal').on('shown.bs.modal', function () {
+    $('#id_title').focus()
+  })
 
     var info_messages = document.getElementsByClassName('alert-info');
 
