--- a/library_project/website/templates/base.html
+++ b/library_project/website/templates/base.html
@@ -71,7 +71,7 @@
         <a class="text-dark nav-link" href="/tools">Tools</a>
       </li>
       <li class="nav-item">
-        <a class="text-dark nav-link" href="/l">Kiosk</a>
+        <a class="text-dark nav-link" href="/l" target=”_blank”>Kiosk</a>
       </li>
 {#      <li class="nav-item">#}
 {#        <a class="nav-link" href="/library/generate-report">Generate Report</a>#}
