--- a/src/bookend/templates/pages/settings.html
+++ b/src/bookend/templates/pages/settings.html
@@ -5,22 +5,39 @@
 {% block title %}Tools{% endblock %}
 
 {% block content %}
-<link rel="stylesheet" href="{% static 'website/buttons.css' %}">
+{#<link rel="stylesheet" href="{% static 'website/buttons.css' %}">#}
 <link rel="stylesheet" href="{% static 'website/background.css' %}">
 
-<div class="buttonContainer">
-  <button class="button-small launch-modal" data-toggle="modal" data-target="#confirmCleanAuthorsModal">
-    <div class="textBox">
-      Clean author fields
-    </div>
-  </button>
+<div class="container">
+
+<div class="row">
+<div class="col-2"></div>
+<div class="col-8 text-center">
+{#    <br>#}
+{#    <div class="buttonContainer">#}
+{#      <button class="btn btn-primary mb-3 launch-modal" data-toggle="modal" data-target="#confirmCleanAuthorsModal">#}
+{#        <div class="textBox">#}
+{#          Clean author fields#}
+{#        </div>#}
+{#      </button>#}
+{#    </div>#}
+{#    <br>#}
+{#    <div class="buttonContainer">#}
+{#      <button class="btn btn-primary mb-3 launch-modal" data-toggle="modal" data-target="#confirmGenerateISBNBarcodesModal">#}
+{#        <div class="textBox">#}
+{#          Generate book and user barcodes#}
+{#        </div>#}
+{#      </button>#}
+{#    </div>#}
+{#    <br>#}
+    <br><br>
+    <form method="post" action="/settings" class="form">
+        {% csrf_token %}
+        {% bootstrap_form form %}
+        {% bootstrap_button button_type="submit" content="Update" %}
+    </form>
 </div>
-<div class="buttonContainer">
-  <button class="button-small launch-modal" data-toggle="modal" data-target="#confirmGenerateISBNBarcodesModal">
-    <div class="textBox">
-      Generate book and user barcodes
-    </div>
-  </button>
+</div>
 </div>
 
 
