--- a/src/website/templates/base-no-menus.html
+++ b/src/website/templates/base-no-menus.html
@@ -21,7 +21,7 @@
     <a class="navbar-brand" href="/l"><img src="{% static 'website/books3.webp' %}" width="50" height="50"></a>
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item">
-        <a class="text-dark nav-link" href="/l">Bookend</a>
+        <a class="text-dark nav-link" href="/l">{{ APP_TITLE }}</a>
       </li>
     </ul>
   </nav>
