--- a/src/website/templates/base.html
+++ b/src/website/templates/base.html
@@ -21,7 +21,7 @@
     <a class="navbar-brand" href="/"><img src="{% static 'website/books3.webp' %}" width="50" height="50"></a>
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item">
-        <a class="text-dark nav-link" href="/">Bookend</a>
+        <a class="text-dark nav-link" href="/">{{ APP_TITLE }}</a>
       </li>
       <li class="nav-item">
         <a class="text-dark nav-link" href="/library/catalog">Catalog</a>
@@ -68,7 +68,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="text-dark nav-link" href="/tools">Tools</a>
+        <a class="text-dark nav-link" href="/settings">Settings</a>
       </li>
       <li class="nav-item">
         <a class="text-dark nav-link" href="/l" target=”_blank”>Kiosk</a>
