--- a/src/website/templates/base.html
+++ b/src/website/templates/base.html
@@ -50,6 +50,7 @@
             <li><a class="dropdown-item" href="/">Check In/Out</a></li>
             <li><a class="dropdown-item" href="/library/new">Add Book</a></li>
             <li><a class="dropdown-item" href="/library/remove">Remove Book</a></li>
+            <li><a class="dropdown-item" href="/library/sticker-wizard">ISBN Sticker Wizard</a></li>
             <li><a class="dropdown-item" href="/library/import-csv">Import CSV</a></li>
           </ul>
         </div>
