--- a/src/website/templates/base.html
+++ b/src/website/templates/base.html
@@ -72,6 +72,9 @@
         <a class="text-dark nav-link" href="/settings">Settings</a>
       </li>
       <li class="nav-item">
+        <a class="text-dark nav-link" href="/stats">Stats</a>
+      </li>
+      <li class="nav-item">
         <a class="text-dark nav-link" href="/l" target=”_blank”>Kiosk</a>
       </li>
 {#      <li class="nav-item">#}
