--- a/src/bookend/templates/pages/user-details.html
+++ b/src/bookend/templates/pages/user-details.html
@@ -18,6 +18,7 @@
                 {% csrf_token %}
                 {% bootstrap_form user_name_form %}
 
+                <label class="form-label">Currently checked out books</label>
                 <div id="isbns-formset">
                     {{ user_isbns_formset.management_form }}
                     {% for isbn_form in user_isbns_formset %}
@@ -27,13 +28,10 @@
                     {% endfor %}
                 </div>
                 <button type="button" class="btn btn-primary mb-3" id="add-isbn">Add ISBN</button>
-
                 {% bootstrap_form user_details_form %}
-
 
                 {% bootstrap_button button_type="submit" content="Update" %}
             </form>
-
         </div>
 	<div class="col-2"></div>
 
